placed new guest in a card and made footer extend the full width of the page

--- a/views/guest-create.handlebars
+++ b/views/guest-create.handlebars
@@ -1,47 +1,42 @@
 <body>
   <main>
-      <nav class="navbar navbar-expand-sm bg-light">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/members">
-            Main
-          </a>
-          <a class="navbar-brand" href="/logout">
-            Logout
-          </a>
-        </div>
+    <div class="card">
+      <div class="card-header">
+        <h3>Add a New Guest</h3>
       </div>
-    </nav>
-    {{!-- Guest Input Form --}}
-    <form class="guest">
-      {{!-- This value here is for the eventInfoId to create guest --}}
-      <h3 id="eventInfoId">{{eventInfoId}}</h3>
-      <div class="form-group">
-        {{!-- First Name --}}
+      {{!-- Guest Input Form --}}
+      <form class="guest">
+        {{!-- This value here is for the eventInfoId to create guest --}}
+        <h3 id="eventInfoId">{{eventInfoId}}</h3>
         <div class="form-group">
-          <label for="firstName">Name</label>
-          <input type="text" class="form-control" id="firstNameInput" placeholder="First Name">
-        </div>
-        {{!-- Last Name --}}
-        <div class="form-group">
-          <label for="lastName">Name</label>
-          <input type="text" class="form-control" id="lastNameInput" placeholder="Last Name">
-        </div>
-        {{!-- Email --}}
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="text" class="form-control" id="emailInput" placeholder="Email">
-        </div>
-        {{!-- Phone --}}
-        <div class="form-group">
-          <label for="phone">Phone</label>
-          <input type="text" class="form-control" id="phoneInput" placeholder="Phone">
-        </div>
-    </form>
+          {{!-- First Name --}}
+          <div class="form-group">
+            <label for="firstName">Name</label>
+            <input type="text" class="form-control" id="firstNameInput" placeholder="First Name">
+          </div>
+          {{!-- Last Name --}}
+          <div class="form-group">
+            <label for="lastName">Name</label>
+            <input type="text" class="form-control" id="lastNameInput" placeholder="Last Name">
+          </div>
+          {{!-- Email --}}
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="emailInput" placeholder="Email">
+          </div>
+          {{!-- Phone --}}
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" id="phoneInput" placeholder="Phone">
+          </div>
+          {{!-- Submit button --}}
+          <button type="button" class="btn btn-success" id="submitGuestCreate">Submit</button>
+          <button type="button" class="btn btn-success" id="addNewGuest">New Guest</button>
+      </form>
+    </div>
+    </div>
+    </div>
 
-    {{!-- Submit button --}}
-    <button type="button" class="btn btn-success" id="submitGuestCreate">Submit</button>
-    <button type="button" class="btn btn-success" id="addNewGuest">New Guest</button>
 
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
