made footer extend width of page by adding a new closing div

--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -35,6 +35,8 @@
           <button type="button" class="btn btn-success" id="addNewVendor">New Vendor</button>
       </form>
     </div>
+    </div>
+    </div>
 
 
 
