--- a/views/guest-create.handlebars
+++ b/views/guest-create.handlebars
@@ -1,5 +1,6 @@
 <body>
   <main>
+    <div class = "card">
       {{!-- Guest Input Form --}}
     <form class="guest">
       {{!-- This value here is for the eventInfoId to create guest --}}
@@ -26,10 +27,11 @@
           <input type="text" class="form-control" id="phoneInput" placeholder="Phone">
         </div>
     </form>
+    </div>
 
     {{!-- Submit button --}}
-    <button type="button" class="btn navbtn1" id="submitGuestCreate">Submit</button>
-    <button type="button" class="btn navbtn1" id="addNewGuest">New Guest</button>
+    <button type="button" class="btn navbtn1" id="submitGuestCreate">Submit<br><i class="fas fa-sign-in-alt"></i></button>
+    <button type="button" class="btn navbtn1" id="addNewGuest">New Guest<br><i class="fas fa-user-plus"></i></button>
 
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
