--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -21,13 +21,17 @@
             <td>{{dataValues.eventDate}}</td>
             {{!-- <td><a href="/summary/{{dataValues.id}}">Summary</a></td> --}}
             <td><button type="button" class="btn navbtn1"
-                onclick="window.location = '/summary/{{dataValues.id}}';"><i class="far fa-file"></i> Summary</button>
+                onclick="window.location = '/summary/{{dataValues.id}}';"><i class="far fa-file"></i>
+                <br> Summary</button>
             </td>
             {{!-- <td><a href="/vendorInfos/{{dataValues.id}}">Add</a></td> --}}
-            <td><button type="button" class="btn navbtn1" onclick="window.location = '/guests/{{dataValues.id}}';"><i class="fas fa-user-plus"></i> Add</button></td>
-            <td><button type="button" class="btn navbtn1" onclick="window.location = '/vendorInfos/{{dataValues.id}}';"><i class="fas fa-user-plus"></i> Add</button></td>
+            <td><button type="button" class="btn navbtn1" onclick="window.location = '/guests/{{dataValues.id}}';"><i class="fas fa-user-plus"></i> 
+            <br>Add Guest</button></td>
+            <td><button type="button" class="btn navbtn1" onclick="window.location = '/vendorInfos/{{dataValues.id}}';"><i class="fas fa-user-plus"></i>
+            <br>Add Vendor</button></td>
             {{!-- <td><a style='cursor:pointer;color:red' data-Id="{{dataValues.id}}" class='delete-event'>Delete</a></td> --}}
-            <td><button type="button" class="btn navbtn1 delete-event" data-Id="{{dataValues.id}}"><i class="far fa-trash-alt fa-1x"></i> Delete</button>
+            <td><button type="button" class="btn navbtn1 delete-event" data-Id="{{dataValues.id}}"><i class="far fa-trash-alt fa-1x"></i> 
+            <br>Delete</button>
 
           </tr>
           {{/each}}
