--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -4,10 +4,11 @@
   <body>
     {{!-- Event Info Table --}}
     <div class="card" id="summary-card">
-      <div class="card-header">
-        <h3>Event Info</h3>
+      <div class = "card">
+      <div class="card-header row">
+        <h3 class="col">Event Info</h3>
       </div>
-      <div style="overflow-x:auto;">
+      <div>
         <table class="table table-striped">
             {{!-- Head --}}
             <thead>
@@ -21,22 +22,20 @@
             </thead>
             {{!-- Body --}}
             <tr class="eventInfoEdit">
-              <td class="event-data"><textarea readonly>{{event.couple}}</textarea></td>
-              <td class="event-data"><textarea readonly>{{event.venueName}}</textarea></td>
-              <td class="event-data"><textarea readonly>{{event.eventDate}}</textarea></td>
-              <td><div class="row"></div><button type="button" class="btn navbtn1 editEvent col-4"><i class="far fa-edit fa-1x"></i>
+              <td class="event-data col-2"><textarea readonly>{{event.couple}}</textarea></td>
+              <td class="event-data col-2"><textarea readonly>{{event.venueName}}</textarea></td>
+              <td class="event-data col-2"><textarea readonly>{{event.eventDate}}</textarea></td>
+              <td><div class="row"></div><button type="button" class="btn navbtn1 editEvent col-2 text-nowrap"><i class="far fa-edit fa-1x"></i><br>
                   Edit</button>
-                <button type="button" class="btn navbtn1 editEventSave col-4"><i class="far fa-save fa-1x"></i>
+                <button type="button" class="btn navbtn1 editEventSave col-2 text-nowrap"><i class="far fa-save fa-1x"></i><br>
                   Save</button>
-                  <button type="button" class="btn navbtn1 delete-event col-4" data-Id="{{event.id}}"
-                  onclick="deleteEvent({{event.id}})" href="/members"><i class="far fa-trash-alt fa-1x"></i>
-                  Delete</button>
+                  <a type="button" class="btn navbtn1 delete-event col-2 text-nowrap" onclick="deleteEvent({{event.id}})" data-id="{{event.id}}"><i class="far fa-trash-alt fa-1x"></i><br>
+                 {{event.id}} Delete</a>
                   </div></td>
             </tr>
           </table>
         </div>
       </div>
-    </div>
 
     {{!-- Vendor Info Card--}}
     <div class="card" id="summary-card">
@@ -44,9 +43,8 @@
         <h3>Vendor Info</h3>
       </div>
       {{!-- <div style="overflow-x:auto;"></div> --}}
-      <div style="overflow-x:auto;">
-        <table class="table table-striped"></table>
-        <table class="table table-striped">
+      <div class="">
+        <table class="table table-borderless table-responsive">
           {{!-- Head --}}
           <thead>
             <tr>
@@ -54,41 +52,39 @@
               <th>Service</th>
               <th>Email</th>
               <th>Phone</th>
-              <th>Edit</th>
-              <th>Delete</th>
             </tr>
           </thead>
           {{!-- Row populate --}}
           {{#each vendor}}
           <tr>
-            <td id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.vendorName}}</textarea></td>
-            <td id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.service}}</textarea></td>
-            <td id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.email}}</textarea></td>
-            <td id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.phone}}</textarea></td>
-            <td><button type="button" class="navbtn1 btn editVendor" id="{{dataValues.id}}"><i
+            <td scope="col" id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.vendorName}}</textarea></td>
+            <td scope="col" id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.service}}</textarea></td>
+            <td scope="col" id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.email}}</textarea></td>
+            <td scope="col" id="vendor-data{{dataValues.id}}"><textarea readonly>{{dataValues.phone}}</textarea></td>
+            <td scope="col">
+              <div class="row"><button type="button" class="navbtn1 btn editVendor text-nowrap col-4" id="{{dataValues.id}}"><i
                   class="far fa-edit fa-1x"></i> Edit</button>
-              <button type="button" class="navbtn1 btn editVendorSave" id="{{dataValues.id}}"><i
-                  class="far fa-save fa-1x"></i> Save</button>
-            <td>
-              {{!--
-            <td><button style='cursor:pointer;color:red' data-id="{{dataValues.id}}" class='delete-vendor'
-                onclick="deleteVendor({{dataValues.id}})">Delete</button></td> --}}
-            <td><button type="button" class="navbtn1 btn delete-vendor" data-Id="{{dataValues.id}}"
+              <button type="button" class="navbtn1 btn editVendorSave text-nowrap col-4" id="{{dataValues.id}}"><i
+                  class="far fa-save fa-1x"></i> Save</button>            
+            <button type="button" class="navbtn1 btn delete-vendor text-nowrap col-4" data-Id="{{dataValues.id}}"
                 onclick="deleteVendor({{dataValues.id}})"><i class="far fa-trash-alt fa-1x"></i> Delete</button>
+            </div>
             </td>
           </tr>
           {{/each}}
         </table>
-        <a type="button" class="btn navbtn1 col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor</a>
+        </div>
+        <div class="row">
+        <a type="button" class="btn navbtn1 col" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor</a>
+        </div>
       </div>
-    </div>
-    </div>
+      </div>
     {{!-- Guest List Card--}}
-    <div class="card">
+    <div class="card" id="summary-card">
       <div class="card-header">
         <h3>Guest List</h3>
       </div>
-      <div style="overflow-x:auto;">
+      <div style=>
         <table class="table table-striped"></table>
         <table class="table table-striped">
           {{!-- Head --}}
@@ -98,8 +94,6 @@
               <th>Last Name</th>
               <th>Email</th>
               <th>Phone</th>
-              <th>Edit</th>
-              <th>Delete</th>
             </tr>
           </thead>
           {{!-- Row populate --}}
@@ -114,16 +108,18 @@
               <button type="button" class="navbtn1 editVendorSave" id="{{dataValues.id}}"><i
                   class="far fa-save fa-1x"></i> Save</button>
             <td>
-            <td><button type="button" class="btn-danger delete-guest" data-Id="{{dataValues.id}}"
-                onclick="deleteGuest({{dataValues.id}})"><i class="far fa-trash-alt fa-1x"></i> Delete</button>
+            <td><button type="button" class="navbtn1 delete-guest" data-Id="{{dataValues.id}}"
+                onclick="deleteGuest({{dataValues.id}})"><i class="far fa-trash-alt fa-1x"></i>{{dataValues.id}} Delete</button>
             </td>
           </tr>
           {{/each}}
         </table>
-        <a type="button" class="btn btn-success col-1" id="circleButton" href="/guests/{{event.id}}">Add Guest</a>
+        <a type="button" class="btn navbtn1 col-1" id="circleButton" href="/guests/{{event.id}}">Add Guest</a>
       </div>
     </div>
-    </div>
+  </body>
+
+
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/summary.js"></script>
@@ -165,15 +161,15 @@
       });
 
       // DELETE EVENT
-      function deleteEvent(id) {
+      function deleteEvent(newId) {
+        let evntdata = $(this).attr("data-id")
         console.log("this event was deleted");
-        console.log(id);
+        console.log(evntdata);
         $.ajax({
           method: "DELETE",
-          url: "/api/eventInfos/" + id
+          url: "/api/eventInfos/" + newId
         }
         )
-        window.location.href = "/members";
       }
 
       // EDIT VENDOR
@@ -269,12 +265,12 @@
       });
 
       // DELETE GUEST
-      function deleteGuest(id) {
+      function deleteGuest(guestid) {
         console.log("this was deleted");
-        console.log(id);
+        console.log(guestid);
         $.ajax({
           method: "DELETE",
-          url: "/api/guests/" + id
+          url: "/api/guests/" + guestid
         }
         )
         location.reload();
