--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <body>
     <main>
         <img src="/assets/Ap4p.png" class="jumbotron" id="logo"></img>
-<div class="card">
+{{!-- <div class="card">
     <div class="card-header">
         <h3>Log In</h3>
     </div>
@@ -20,7 +20,22 @@
                 </div>
             </div>
         </div>
-</div>
+</div> --}}
+    <div class="card">
+        <div class="card-header">
+            <h3>Log In</h3>
+        </div>
+        <form class="login">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <button type="submit" class="btn btn-success">Login</button>
+        </form>
+        <br>
+        <p>Or sign up <a href="/signup">here</a>.</p>
+    </div>
+    </div>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
