small css fixing

--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -78,7 +78,7 @@
     </table>
   </div>
 
-    <a type="button" class="btn navbtn1 col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor<br><i class="fas fa-user-plus"></i></a>
+    <a type="button" class="btn navbtn1 col-2 loginbutton" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor<br><i class="fas fa-user-plus"></i></a>
 {{!-- <button type="button" class="btn navbtn1 col-1" id="addNewVendor">New Vendor<br><i class="fas fa-user-plus"></i></button> --}}
 </div>
 
@@ -120,8 +120,8 @@
       </tr>
       {{/each}}
     </table>
-    <button type="button" class="btn navbtn1 col-1" id="circleButton" href="/guests/{{event.id}}">Add Guest<i class="fas fa-user-plus"></i> 
-            <br></button>
+    <button type="button" class="btn navbtn1 col-2 loginbutton" id="circleButton" href="/guests/{{event.id}}">Add Guest<br><i class="fas fa-user-plus"></i> 
+            </button>
     {{!-- <button type="button" class="btn navbtn1" onclick="window.location = '/guests/{{dataValues.id}}';"><i class="fas fa-user-plus"></i> 
             <br>Add Guest</button> --}}
   </div>
