--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="palmtrees">
 	<div class="wrapper">
 		<div class="container-fluid">
         <div class="navbar-header row">
