--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+html, body {
+  width: 100%;
+  height:100%;
+}
+.palmtrees{
+  background-image: url(/assets/palmtree-background.png);
 
+}
+body {
+    background: linear-gradient(-45deg, #c5c5ae, #f1cfa7, #ffaab0, #fbf9ea);
+    background-size: 150% 150%;
+    animation: gradient 35s ease infinite;
+}
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
   form.signup,
   form.login {
