--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -28,7 +28,7 @@
               class="far fa-save fa-1x"></i><br>
             Save</button>
           <a type="button" class="btn navbtn1 delete-event col-2 text-nowrap" onclick="deleteEvent({{event.id}})"
-            data-id="{{event.id}}"><i class="far fa-trash-alt fa-1x"></i><br>Delete</a>
+            data-id="{{event.id}}" href="/members"><i class="far fa-trash-alt fa-1x"></i><br>Delete</a>
   </div>
   </td>
   </tr>
