--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
 
+body {
+    background: linear-gradient(-45deg, #ff8b8b, #f5f3af, #facff2, #F5FAB8);
+    background-size: 400% 400%;
+    animation: gradient 35s ease infinite;
+}
 
-  form.signup,
-  form.login {
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+form.signup,
+form.login {
     margin-top: 20px;
-  }
+}
 
-  main,
-  header,
-  section {
+main,
+header,
+section {
     margin: 10;
     /* margin-bottom:20px; */
     padding: 10px;
@@ -19,105 +41,107 @@
     text-decoration: none;
     font-family: "Raleway", sans-serif;
     /* position: relative; */
-  }
+}
 
-  .container {
+.container {
     width: auto;
     /* padding: 0 15px; */
-  }
+}
 
-  /* #summary-card {
+
+/* #summary-card {
     max-width: 900px;
   } */
 
-  #members-card {
+#members-card {
     max-width: 700px;
-  }
+}
 
-  .card {
+.card {
     padding: 10px;
     margin: 15px;
     word-wrap: none;
-  }
+}
 
-  .btn {
+.btn {
     margin: 5px;
-  }
+}
 
-  #summary-card {
+#summary-card {
     padding: 10px;
     margin: 10px;
-    }
+}
 
-  #vendor-section {
+#vendor-section {
     margin-bottom: 10px;
-  }
+}
 
-  p {
+p {
     margin-bottom: 15px;
     font-size: 14px;
     line-height: 20px;
     color: #a9a9a9;
-  }
-
+}
 
 textarea {
-  border: none;
-  background-color: transparent;
-  outline: none;
-  resize: none;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    resize: none;
 }
 
 #eventInfoId {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;  
-  text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
 
-
-body{
-  background-color: #e6e3de !important;
+body {
+    background-color: #e6e3de !important;
 }
 
-#logo{
-  width: 100%;
-}
-.color{
-background-color: #e6e3de;
-color: black !important;
+#logo {
+    width: 100%;
 }
 
-.navbtn1{
-  background: transparent;
-  border: none;
-}
-#memberslogo{
-  width: 60%;
+.color {
+    background-color: #e6e3de;
+    color: black !important;
 }
 
-.linkcolor{
-  color: black;
+.navbtn1 {
+    background: transparent;
+    border: none;
 }
 
-button:hover{
-  border-color: black;
+#memberslogo {
+    width: 60%;
+}
 
+.linkcolor {
+    color: black;
 }
-.col:hover{
-  border-color: black;
-  
+
+button:hover {
+    border-color: black;
 }
-.loginbutton{
-  background-color: #f3f5e2;
-  border-radius: .25rem;
-  border-color: black;
-  margin-top: 2%;
+
+.col:hover {
+    border-color: black;
 }
-.buttonrow{
-  align-content: right;
+
+.loginbutton {
+    background-color: #f3f5e2;
+    border-radius: .25rem;
+    border-color: black;
+    margin-top: 2%;
+}
+
+.buttonrow {
+    align-content: right;
 }
