--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -21,10 +21,11 @@
                     <input type="date" class="form-control" id="dateInput">
                 </div>
             </form>
-            <button type="button" class="btn navbtn1" id="submitNewWedding">Submit<br><i class="fas fa-sign-in-alt"></i></button>
+            <button type="button" class="btn navbtn1" id="submitNewWedding">Submit<br><i
+                    class="fas fa-sign-in-alt"></i></button>
         </div>
         {{!-- Navigation buttons --}}
-        
+
         {{!-- <button type="button" class="btn btn-success" id="backToMain">Main</button> --}}
         {{!-- <button type="button" class="btn btn-success" id="toSummary">Summary</button> --}}
         </div>
@@ -36,7 +37,6 @@
         <script type="text/javascript" src="js/planner.js"></script>
         <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
 
-        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomBounce3.min.js"></script>
-        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomEase3.min.js"></script>
+
     </main>
 </body>
