--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-		<link rel="stylesheet" href="/stylesheets/style.css" type="text/css" />
+	<link rel="stylesheet" href="/stylesheets/style.css" type="text/css" />
 	<title>Wedding Planner!</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://kit.fontawesome.com/59ad34aafc.js" crossorigin="anonymous"></script>
@@ -16,19 +16,27 @@
 <body>
 	<div class="wrapper">
 		<div class="container-fluid">
-        <div class="navbar-header row">
-          <a class="navbar-brand navbtn1 col-1 linkcolor" href="/members"><i class="fab fa-pagelines fa-1x"></i>
-          <br>
-            Main
-          </a>
-          <a class="navbar-brand navbtn1 col linkcolor" href="/logout"><i class="fab fa-envira"></i>
-          <br>
-            Logout
-          </a>
-        </div>
-      </div>
+			<div class="navbar-header row">
+				<a class="navbar-brand navbtn1 col-1 linkcolor" href="/members"><i class="fab fa-pagelines fa-1x"></i>
+					<br>
+					Main
+				</a>
+				<a class="navbar-brand navbtn1 col linkcolor" href="/logout"><i class="fab fa-envira"></i>
+					<br>
+					Logout
+				</a>
+			</div>
+		</div>
 		<div class="container">
 			{{{ body }}}
+
+			<footer class="footer">
+				<div class="container">
+					<span class="text-muted">Copyright 2021</span>
+				</div>
+			</footer>
+
+			{{!-- Script Tags --}}
 			<script src="/js/login.js"></script>
 			<script src="/js/members.js"></script>
 			<script src="/js/planner.js"></script>
@@ -37,11 +45,7 @@
 			<script src="/js/guest-create.js"></script>
 			<script src="js/summary.js"></script>
 
-			<footer class="footer bg-dark">
-				<div class="container">
-					<span class="text-muted">Place sticky footer content here.</span>
-				</div>
-			</footer>
+			
 		</div>
 	</div>
 
