--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -77,7 +77,7 @@
     </table>
   </div>
 
-    <a type="button" class="btn navbtn1 col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor<br><i class="fas fa-user-plus"></i></a>
+    <a type="button" class="btn text-nowrap navbtn1 col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor<br><i class="fas fa-user-plus"></i></a>
 {{!-- <button type="button" class="btn navbtn1 col-1" id="addNewVendor">New Vendor<br><i class="fas fa-user-plus"></i></button> --}}
 </div>
 
