--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,7 +38,6 @@
     padding: 10px;
     margin: 15px;
     word-wrap: none;
-    font-family: "Raleway", sans-serif;
   }
 
   .btn {
@@ -78,7 +77,6 @@ footer {
   bottom: 0;
   width: 100%;  
   text-align: center;
-  font-family: "Raleway", sans-serif;
 }
 
 
@@ -115,7 +113,7 @@ button:hover{
   
 }
 .loginbutton{
-  background-color: #f3f5e2;
+  background-color:#e6e3de;
   border-radius: .25rem;
   border-color: black;
   margin-top: 2%;
