disabled navbar on sign in page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,7 +45,7 @@
         hidebar();
         function hidebar() {
             console.log('123')
-            $(".navbar").hide();
+            $(".navbar-header").hide();
         }
     </script>
 
