--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -44,7 +44,7 @@
         hidebar();
         function hidebar() {
             console.log('123')
-            $(".navbar").hide();
+            $(".navbar-header").hide();
         }
     </script>
 
