--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,14 +3,15 @@ html, body {
   width: 100%;
   height:100%;
 }
-.palmtrees{
-  background-image: url(/assets/palmtree-background.png);
-
-}
-body {
+/* .palmtrees{
+  z-index: -3;
+} */
+body {    
+    background-color: transparent;  
     background: linear-gradient(-45deg, #c5c5ae, #f1cfa7, #ffaab0, #fbf9ea);
     background-size: 150% 150%;
     animation: gradient 35s ease infinite;
+   
 }
 @keyframes gradient {
     0% {
@@ -58,6 +59,7 @@ body {
   }
 
   .card {
+    font-family: "Raleway", sans-serif;
     padding: 10px;
     margin: 15px;
     word-wrap: none;
@@ -96,16 +98,13 @@ textarea {
 }
 
 footer {
+  z-index: -3;  
   position: fixed;
   bottom: 0;
   width: 100%;  
   text-align: center;
 }
 
-
-body{
-  background-color: #e6e3de !important;
-}
 
 #logo{
   width: 100%;
