--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="palmtrees">
+<body>
 	<div class="wrapper">
 		<div class="container-fluid">
         <div class="navbar-header row">
@@ -37,7 +37,8 @@
 			<script src="/js/guest-create.js"></script>
 			<script src="js/summary.js"></script>
 
-			<footer class="footer bg-dark">
+			<footer class="footer">
+				 <img class="palmtrees" src= "/assets/palmtree-background.png">
 				<div class="container">
 					<span class="text-muted">Place sticky footer content here.</span>
 				</div>
