--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 <body>
 	<div class="wrapper">
 		<div class="container-fluid">
-        <div class="navbar-header row">
+        <div class="navbar navbar-header row">
           <a class="navbar-brand navbtn1 col-1 linkcolor" href="/members"><i class="fab fa-pagelines fa-1x"></i>
           <br>
             Main
