--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
 			<footer class="footer">
 				 <img class="palmtrees" src= "/assets/palmtree-background.png">
 				<div class="container">
-					<span class="text-muted">Place sticky footer content here.</span>
+					<span class="text-muted">Copyright 2021.</span>
 				</div>
 			</footer>
 		</div>
